# ICP_MVP

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
doc/: METRICS.md
src/FAI3_backend/: Cargo.toml  FAI3_backend.did
src/FAI3_backend/src/: admin_management.rs  config_management.rs  context_association_test.rs  cycles_management.rs  data_management.rs  errors.rs  hugging_face.rs  job_management.rs  lib.rs  llm_fairness.rs  llm_language_evaluations.rs  llm_model.rs  metrics_calculation.rs  model.rs  tests.rs  types.rs  utils.rs
src/FAI3_backend/src/data/: COMPAS_cf_test.csv  COMPAS_test.csv  COMPAS_train.csv  pisa2009_cf_test_processed.csv  pisa2009_test_processed.csv  pisa2009_test_processed_curated.csv  pisa2009_train_processed.csv
src/FAI3_backend/src/inference_providers/: lib.rs  mod.rs  nebius.rs  none.rs  novita.rs  together.rs  traits.rs
src/FAI3_backend/tests/: context_association_test.rs  llm_fairness.rs  llm_language_evaluations.rs  metrics_calculation.rs  models.rs  tests.rs
src/FAI3_backend/tests/common/: mod.rs
src/FAI3_frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/FAI3_frontend/public/: .ic-assets.json5
src/FAI3_frontend/src/: App.jsx  index.scss  main.jsx  main.tsx
src/FAI3_frontend/src/components/: DataUploadModal.tsx  DropdownMenu.tsx  FileUpload.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  Providers.tsx  index.ts
src/FAI3_frontend/src/configs/: fairness.ts  index.ts
src/FAI3_frontend/src/hooks/: index.ts
src/FAI3_frontend/src/pages/: Whoami.tsx  index.ts
(+59 files in other folders)
