[package]
name = "FAI3_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"] # rlib is for integration tests

[dependencies]
candid = "0.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
serde = "1"
serde_json = "1"
num-traits = "0.2"
ic-stable-structures = "0.6.7"
csv = "1.3.1"

[dev-dependencies]
ic-management-canister-types = "0.3.0"
pocket-ic = "7.0.0"